--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,11 @@ dependencies:
   http : 0.12.2
   convert: 2.1.1
   flutter_staggered_grid_view: ^0.3.4
+  dio: 3.0.10
+  photo_view: 0.10.3
+  pinch_zoom: 0.0.4
+  image_downloader: 0.20.1
+  fluttertoast: 7.1.8
 
 
 dev_dependencies:
