--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   pinch_zoom: 0.0.4
   image_downloader: 0.20.1
   fluttertoast: 7.1.8
+  lottie: ^1.0.1
+  cached_network_image: 2.5.0
 
 
 dev_dependencies:
@@ -62,6 +64,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - images/icon.png
+   - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
