--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   fluttertoast: 7.1.8
   lottie: ^1.0.1
   cached_network_image: 2.5.0
+  flutter_bloc: ^7.0.1
+  equatable: ^2.0.2
 
 
 dev_dependencies:
